# skyworkz-assessment

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml
.github/actions/setup_deploy_env/: action.yaml
.github/workflows/: backend.yaml  frontend.yaml  main.yaml
backend/: cdk.json  package-lock.json  package.json
backend/constructs/: api-method.ts
backend/interfaces/: cdk-config.ts  stack-props.ts
backend/lambdas/api/news/: lambda_function.py
backend/lambdas/api/newsitem/: lambda_function.py
backend/lambdas/api/ping/: lambda_function.py
backend/lambdas/api/pre-signed-url/: lambda_function.py
backend/layers/api/: api_utils.py
backend/stacks/api/: response-models.ts  stack.ts
backend/stacks/database/: stack.ts
backend/stacks/frontend/: stack.ts
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  mockpage.js  page.js
scripts/: invoke.py
