[tool.poetry]
name = "skyworkz"
version = "0.0.1"
description = "A short description of the repository"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9,<4.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pylint = "^2.13.8"
pytest = "^7.1.2"
pre-commit = "^2.18.1"
black = "^22.3.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.isort]
profile = "black"
force_sort_within_sections="true"
line_length = 120

[tool.black]
line-length = 120
target_version = ['py310']
include = '\.py$'

[tool.pylint]
[tool.pylint.messages_control]
disable=""",
    #line-too-long,
    logging-fstring-interpolation,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    #E0401,
    #C0115,
    #C0116,
    #R0903,
    #R0801,
    #R1710
    """
